objects/QA_AccObj2__c.object
<CustomObject>
    <fields>
        <fullName>QAAccField6__c</fullName>
        <label>QAAccField6</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QaACField5__c</fullName>
        <description>Add comment for QaACField5</description>
        <label>QaACField5</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QaAcField1__c</fullName>
        <description>Add Field1</description>
        <label>QaAcField1</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QaAccField3__c</fullName>
        <label>QaAccField3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QaAccField4__c</fullName>
        <label>QaAccField4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QatestField2__c</fullName>
        <description>Add comment for QatestField2</description>
        <label>QatestField2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>QA-AccObj2</label>
    <nameField>
        <label>QA-AccObj2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QAAccObj2s</pluralLabel>
    <recordTypes>
        <fullName>AR_recordType2</fullName>
        <active>false</active>
        <label>AR-recordType2</label>
    </recordTypes>
    <recordTypes>
        <fullName>AR_reecordTpes</fullName>
        <active>true</active>
        <description>Add comment for AR reecordTpes</description>
        <label>AR reecordTpes</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>AR_sharing_reaSson1__c</fullName>
        <label>AR sharing reason1</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>AR_sharing_reason2__c</fullName>
        <label>AR-sharing reason2</label>
    </sharingReasons>
    <validationRules>
        <fullName>AR_ValidationRule1</fullName>
        <active>true</active>
        <description>Add   Comment for  this AR Validation  Rule1</description>
        <errorConditionFormula>ISBLANK( QaAcField1__c )</errorConditionFormula>
        <errorMessage>Please Enter a Value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AR_validationrule2</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( QatestField2__c )</errorConditionFormula>
        <errorMessage>please enter a value</errorMessage>
    </validationRules>
</CustomObject>